--- a/src/app.css
+++ b/src/app.css
@@ -11,3 +11,39 @@
   font-size: 18px;
   font-weight: normal;
 }
+.product-row{
+  border: none;
+  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+.product-col{
+  width: 20%;
+  padding:10px;
+  border-radius:10px;
+  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.2);
+  margin: 10px auto;
+}
+
+.product-col .body{
+  width: 100%;
+}
+.price{
+  margin: 10px 10px;
+}
+.product-col .body img{
+  width: 100%;
+  height:250px;
+}
+.description{
+  padding:10px;
+  color: #5b595977;
+  font-size: 16px;
+  font-weight: normal;
+}
+.head-title{
+  padding: 10px;
+}
