--- a/src/app.css
+++ b/src/app.css
@@ -19,6 +19,7 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  border: none;
 }
 .product-col{
   width: 20%;
@@ -46,4 +47,57 @@
 }
 .head-title{
   padding: 10px;
+}
+.btn-shop{
+  border: none;
+  padding: 10px 18px;
+  margin: 10px 10px;
+  border-radius: 15px;
+  background-color: rgba(0, 72, 255, 0.533);
+  color: white;
+  font-size: 16px;
+  letter-spacing: 1px;
+  font-weight: bold;
+  width: 92%;
+   
+
+}
+.product-cart-row{
+    border: none;
+      padding: 10px;
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: center;
+      border: none;
+}
+.product-cart-col{
+width: 60%;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.2);
+  margin: 10px auto;
+}
+.itemcart{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.itemcart .body{
+  width: 40%;
+}
+.itemcart .body img{
+  width: 350px;
+}
+.itemcart .cart-detail {
+  width: 60%;
+}
+.btn-container{
+  margin: 40px 10px;
+}
+.btn-container input{
+  text-align: center;
+
 }
